<resources>
    <string name="app_name" translatable="false">SAKM Pult (sms)</string>
    <string name="devices">Devices</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="phone">Phone number</string>
    <string name="add_device">Add device</string>
    <string name="additional_phone">Additional phone number</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="double_device_id">Device with the same id already exist!</string>
    <string name="required_field">This is required field</string>
    <string name="id" translatable="false">ID</string>
    <string name="command">Command</string>
    <string name="device_type_test">The test bin</string>
    <string name="device_type_temp">Temperature sensor</string>
    <string name="device_type_pressure">Pressure sensor</string>
    <string name="device_type_humidity">Humidity sensor</string>
    <string name="device_type_voltmeter">Voltmeter</string>
    <string name="device_type_ammeter">Ammeter</string>
    <string name="device_location_unknown">Unknown</string>
    <string name="device_location_internal">Internal sensor</string>
    <string name="device_location_external">External sensor</string>
    <string name="device_location_flare">Flare fittings</string>
    <string name="device_location_prouver">Prouver</string>
    <string name="device_location_discharge_line">Discharge line</string>
    <string name="device_location_annular_line">Annular line</string>
    <string name="rst">Reboot registrator</string>
    <string name="nwell">New well</string>
    <string name="srv">Set up address, port and connection interval for data server</string>
    <string name="upd">Set up address, port and connection interval for update server</string>
    <string name="apn_cm">Make APN, (address:login:password) for GPRS connection</string>
    <string name="gps">Get current gps</string>
    <string name="clr">Clear registrator memory</string>
    <string name="stat">Get statistics</string>
    <string name="val_cm">Get current sensors values</string>
    <string name="showcfg">Get current configuration</string>
    <string name="time_cm">Set up date and time</string>
    <string name="reqdata">Initiate registrator for connection to data server</string>
    <string name="requpd">Initiate registrator for connection to update server</string>
    <string name="swsim">Switch SIM</string>
    <string name="server">Server IP</string>
    <string name="port">Port</string>
    <string name="connection_interval">Connection interval (sec)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="apn" translatable="false">APN</string>
    <string name="apply">Apply</string>
    <string name="wrong_ip">IP should be *.*.*.*, where * is number</string>
    <string name="wrong_number">This should be number</string>
    <string name="set_system_time">Set system date and time</string>
    <string name="select_time">Select time</string>
    <string name="coords">Coordinates</string>
    <string name="sensor">Sensor</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="value">Value</string>
    <string name="key_srv">Data server</string>
    <string name="key_upd">Connection interval</string>
    <string name="key_uptime">Uptime</string>
    <string name="key_livetime">Livetime</string>
    <string name="key_flash">Flash memory</string>
    <string name="key_link">Link</string>
    <string name="key_up">Up</string>
    <string name="key_down">Down</string>
</resources>